--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,7 @@
 node_modules
 # Keep environment variables out of version control
-.env
+# .env (Uncomment if you want to ignore it, currently shared per request)
+# .env
+
 
 /generated/prisma
