--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+VITE_SUPABASE_URL=https://pvpfjharrzwjilowvens.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_o0_gBa3Sh0K4XRYDXLEJyg_qs02xv8g
